[gd_scene load_steps=2 format=2]

[ext_resource path="res://BombHandler.gd" type="Script" id=1]

[node name="BombHandler" type="YSort"]

sort_enabled = true
script = ExtResource( 1 )

[node name="BombTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false

[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


